[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/UI/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Editor/Grid.png" type="Texture" id=2]
[ext_resource path="res://Fonts/SuperTux-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Editor/Arrow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Editor/Line.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Grid" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="SelectedTile" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.25 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 3

[node name="SideBar" type="ColorRect" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
color = Color( 1, 1, 1, 0.752941 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SideBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="TilesButton" type="Button" parent="UI/SideBar/VBoxContainer"]
editor/display_folded = true
margin_right = 128.0
margin_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Tiles"

[node name="Arrow1" type="TextureRect" parent="UI/SideBar/VBoxContainer/TilesButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -4.0
margin_right = 7.0
margin_bottom = 4.0
texture = ExtResource( 4 )

[node name="Line1" type="TextureRect" parent="UI/SideBar/VBoxContainer"]
margin_top = 30.0
margin_right = 128.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="ObjectsButton" type="Button" parent="UI/SideBar/VBoxContainer"]
editor/display_folded = true
margin_top = 32.0
margin_right = 128.0
margin_bottom = 62.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Objects"

[node name="Arrow2" type="TextureRect" parent="UI/SideBar/VBoxContainer/ObjectsButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -4.0
margin_right = 7.0
margin_bottom = 4.0
texture = ExtResource( 4 )

[node name="Line2" type="TextureRect" parent="UI/SideBar/VBoxContainer"]
margin_top = 62.0
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="EraserButton" type="Button" parent="UI/SideBar/VBoxContainer"]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 30 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )

[node name="Line3" type="TextureRect" parent="UI/SideBar/VBoxContainer"]
margin_top = 94.0
margin_right = 128.0
margin_bottom = 96.0
texture = ExtResource( 5 )

[node name="BottomBar" type="ColorRect" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = -128.0
color = Color( 0.196078, 0.196078, 0.196078, 0.752941 )
[connection signal="pressed" from="UI/SideBar/VBoxContainer/TilesButton" to="." method="_on_TilesButton_pressed"]
[connection signal="pressed" from="UI/SideBar/VBoxContainer/ObjectsButton" to="." method="_on_ObjectsButton_pressed"]
